--- a/src/containers/Blog/Blog.css
+++ b/src/containers/Blog/Blog.css
@@ -16,7 +16,11 @@
   color: black;
 }
 
-.Blog a:hover, 
-.Blog a:active {
+.Blog a:hover {
+  color: #ac2626;
+} 
+
+.Blog a.active {
   color: #fa923f;
+  text-decoration: underline;
 }
